tests/EtaX.3.0-old.check
// 3.0-old exitCode: 0
Starting dotty REPL...
Mar 23, 2020 10:23:59 PM org.jline.utils.Log logr
WARNING: Unable to create a system terminal, creating a dumb terminal (enable debug logging for more information)
scala> // defined trait Sam0S

scala> // defined trait Sam0J

scala> // defined trait Sam1S

scala> // defined trait Sam1J

scala> // defined trait A

scala> def foo(): () => String

scala> def bar: String

scala> def baz(): String

scala> def zap()(): String

scala> def zup(x: Any): String

scala> val t1b: () => Any = Lambda$1298/0x0000000840e10040@8851ec

scala> 1 |val t1c: () => Any = { val t = foo; t } // `()`-insertion because no expected type
  |                               ^^^
  |                               method foo must be called with () argument
val t1c: () => Any = Lambda$1324/0x0000000840e4dc40@44aed6a4

scala> val t1d: () => Any = Lambda$1325/0x0000000840e4b840@6233c6c2

scala> val t1e: Any = Lambda$1326/0x0000000840e4bc40@2ecdf528

scala> 1 |val t1f: Any       = foo() _            // error: _ must follow method
  |                     ^^^^^^^
  |Only function types can be followed by _ but the current expression has type () => String
val t1f: Any = Lambda$1329/0x0000000840e68840@67f591c2

scala> val t20: Any = ""

scala> 1 |val t2a: () => Any = bar                   // error/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14
  |                     ^^^
  |                     Found:    String
  |                     Required: () => Any

scala> 1 |val t2Sam0S: Sam0S = bar                   // err??/warn/succ: -Xlint:eta-zero + -Xlint:eta-sam, no eta-expansion w/o 2.14?
  |                     ^^^
  |                     Found:    String
  |                     Required: Sam0S

scala> 1 |val t2Sam0J: Sam0J = bar                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
  |                     ^^^
  |                     Found:    String
  |                     Required: Sam0J

scala> 1 |val t2b: () => Any = bar()                 // error: bar doesn't take arguments, so expanded to bar.apply(), which misses an argument
  |                     ^^^^^
  |          missing argument for parameter i of method apply: (i: Int): Char

scala> 1 |val t2c: () => Any = bar _                 // ok
  |                     ^^^^^
  |Only function types can be followed by _ but the current expression has type String
val t2c: () => Any = Lambda$1498/0x0000000840fdd440@209ab1d7

scala> 1 |val t2d: () => Any = { val t = bar _ ; t } // ?/ok
  |                               ^^^^^
  |Only function types can be followed by _ but the current expression has type String
val t2d: () => Any = Lambda$1499/0x0000000840fdc840@15844237

scala> 1 |val t2e: Any       = bar _                 // ok
  |                     ^^^^^
  |Only function types can be followed by _ but the current expression has type String
val t2e: Any = Lambda$1500/0x0000000840fdcc40@23bf19c9

scala> 1 |val t2f: Any       = bar() _               // error: not enough arguments for method apply
  |                     ^^^^^^^
  |Only function types can be followed by _ but the current expression has type <nonsensical><error unspecified error></nonsensical>
1 |val t2f: Any       = bar() _               // error: not enough arguments for method apply
  |                     ^^^^^
  |          missing argument for parameter i of method apply: (i: Int): Char

scala> val t3a: () => Any = Lambda$1501/0x0000000840fdc040@15eaa2ce

scala> 1 |val t3b: Any       = { val t = baz   ; t } // ?/succ/warn: apply, ()-insertion
  |                               ^^^
  |                               method baz must be called with () argument
val t3b: Any = ""

scala> val t3c: () => Any = Lambda$1502/0x0000000840fdc440@17d5138

scala> 1 |val t3d: Any       = baz() _               // error: _ must follow method
  |                     ^^^^^^^
  |Only function types can be followed by _ but the current expression has type String
val t3d: Any = Lambda$1503/0x0000000840fdb840@5b7e2a88

scala> val t4a: () => Any = Lambda$1506/0x0000000840fdac40@15961527

scala> val t4b: () => Any = Lambda$1507/0x0000000840fda040@527b989a

scala> val t4c: () => Any = Lambda$1508/0x0000000840fda440@4ed7fb78

scala> val t4d: () => Any = Lambda$1509/0x0000000840fe8440@69173bb7

scala> val t5a: Any => Any = Lambda$1513/0x0000000840fea840@1a262e93

scala> 1 |val t5b: Sam1S      = zup                   // ok, but warning
  |                      ^^^
  |method zup is eta-expanded even though Sam1S does not have the @FunctionalInterface annotation.
val t5b: Sam1S = Lambda$1518/0x0000000840fed040@1940bacd

scala> val t5c: Sam1J = Lambda$1519/0x0000000840fed440@6affbed1

scala> val t5d: Any => Any = Lambda$1522/0x0000000840fef840@6321e29b

scala> val t5e: Any => Any = Lambda$1523/0x0000000840ff0040@1f4dce67

scala> 1 |new A().boom // ?/?/err: apply, ()-insertion
  |^^^^^^^^^^^^
  |method boom must be called with () argument
1 |new A().boom // ?/?/err: apply, ()-insertion
  |    ^
  |    A is a trait; it cannot be instantiated

scala> 1 |val ys = { val t = scala.collection.mutable.Map(1 -> "foo"); xs.clone } // ?/?/ok
  |                                                             ^^
  |                                                             Not found: xs

scala> 
